--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <button class="tecla tecla_plantao"><img class="imagem" src="images/Plantão.png" alt="Plantão"></button>
         
         <button class="tecla tecla_show"><img class="imagem" src="images/ShowDoMilhao.png" alt="Show do Milhão"></button>
+        <button class="tecla tecla_lana"><img class="imagem" src="images/lana" alt="Lana"></button>
+        
 
 
     </section>
