--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         
         <button class="tecla tecla_show"><img class="imagem" src="images/ShowDoMilhao.png" alt="Show do Milhão"></button>
         <button class="tecla tecla_lana"><img class="imagem" src="images/lana" alt="Lana"></button>
+        <button class="tecla tecla_julieta"><img class="imagem" src="images/julieta" alt="Julieta"></button>
+        <button class="tecla tecla_fnafkk"><img class="imagem" src="images/fnaf" alt="fnaf"></button>
         
 
 
