--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     <audio src="sounds/musica_Mario.mp3" id="som_tecla_mario"></audio>
     <audio src="sounds/musica_Plantao.mp3" id="som_tecla_plantao"></audio>
     <audio src="sounds/musica_ShowDoMilhao.mp3" id="som_tecla_show"></audio>
-
+    <audio src="sounds/lana_mp3" id="som_tecla_lana"></audio>
+    <audio src="sounds/julieta_mp3" id="som_tecla_Julieta"></audio>
+    <audio src="sounds/fnafkk_mp3" id="som_tecla_fnaf"></audio>
 
     <script src="main.js"></script>
 </body>
