--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         
         <button class="tecla tecla_show"><img class="imagem" src="images/ShowDoMilhao.png" alt="Show do Milhão"></button>
         <button class="tecla tecla_lana"><img class="imagem" src="images/lana" alt="Lana"></button>
-        <button class="tecla tecla_julieta"><img class="imagem" src="images/julieta" alt="Julieta"></button>
+        <button class="tecla tecla_julieta"><img class="imagem" src="images/julieta" alt="julieta"></button>
+
         <button class="tecla tecla_fnafkk"><img class="imagem" src="images/fnaf" alt="fnaf"></button>
         
 
@@ -42,8 +43,8 @@
     <audio src="sounds/musica_Plantao.mp3" id="som_tecla_plantao"></audio>
     <audio src="sounds/musica_ShowDoMilhao.mp3" id="som_tecla_show"></audio>
     <audio src="sounds/lana_mp3" id="som_tecla_lana"></audio>
-    <audio src="sounds/julieta_mp3" id="som_tecla_Julieta"></audio>
-    <audio src="sounds/fnafkk_mp3" id="som_tecla_fnaf"></audio>
+    <audio src="sounds/julieta_mp3" id="som_tecla_julieta"></audio>
+    <audio src="sounds/fnafkk_mp3" id="som_tecla_fnafkk"></audio>
 
     <script src="main.js"></script>
 </body>
